<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chast_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:onClick="startMainMenuActivity"
            android:layout_width="18dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_button"
            android:contentDescription="@string/three_lines"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/imageButton"
            android:fontFamily="@font/josefinsans_bold"
            android:text="@string/Chast"
            android:textSize="20sp" />
    </RelativeLayout>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:background="@drawable/searchbar"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="40dp"
            android:queryHint="@string/search"
            android:iconifiedByDefault="false"
            style="@style/CustomSearchView"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

</ScrollView>