<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_log_bg"
    tools:context=".Registration_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/montserat_alternates"
        android:text="@string/registration"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/NameRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <EditText
        android:id="@+id/NameRegistration"
        android:inputType="text"
        android:background="@drawable/login_btn_smaler"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintVertical_bias="0.289" />

    <EditText
        android:id="@+id/PasswordRegistration"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/login_btn_smaler"
        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/EmailRegistration"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_btn_smaler"
        android:hint="@string/Email"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RegisterButton1"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginTop="460dp"
        android:onClick="startMainMenuActivity"
        android:background="@drawable/login_btn"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />


</androidx.constraintlayout.widget.ConstraintLayout>