<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_log_bg"
    tools:context=".activity_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/montserat_alternates"
        android:text="@string/Login"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/EmailLogin"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_btn_smaler"
        android:hint="@string/Email"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <EditText
        android:id="@+id/PasswordLogin"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_btn_smaler"
        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button_1"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginTop="400dp"
        android:onClick="startMainMenuActivity"
        android:background="@drawable/login_btn"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />


</androidx.constraintlayout.widget.ConstraintLayout>