<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="9dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_1"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/toi_kg"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:contentDescription="@string/three_lines"
            android:layout_width="22dp"
            android:layout_height="13dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/three_lines"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="25dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_marginTop="10dp"
        android:layout_below="@id/constraint_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/first_button"
                    android:onClick="startChastActivity"
                    android:contentDescription="@string/three_lines"
                    android:layout_width="178dp"
                    android:layout_height="60dp"
                    android:background="@drawable/first_button"/>


            </FrameLayout>

            <TextView
                android:fontFamily="@font/josefinsans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_button"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:onClick="startBusinessActivity"
                    android:contentDescription="@string/three_lines"
                    android:layout_width="178dp"
                    android:layout_height="60dp"
                    android:background="@drawable/second_button"/>

            </FrameLayout>

            <TextView
                android:fontFamily="@font/josefinsans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bussiness"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:contentDescription="@string/three_lines"
                    android:onClick="startEnjoyActivity"
                    android:layout_width="178dp"
                    android:layout_height="60dp"
                    android:background="@drawable/third_button"/>
            </FrameLayout>

            <TextView
                android:fontFamily="@font/josefinsans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enjoy"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageButton
                    android:contentDescription="@string/three_lines"
                    android:layout_width="178dp"
                    android:layout_height="60dp"
                    android:background="@drawable/fourth_button"/>
            </FrameLayout>

            <TextView
                android:fontFamily="@font/josefinsans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Active"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:contentDescription="@string/three_lines"
                    android:layout_width="178dp"
                    android:layout_height="60dp"
                    android:background="@drawable/fifth_button"/>
            </FrameLayout>

            <TextView
                android:fontFamily="@font/josefinsans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kafe"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:contentDescription="@string/three_lines"
                    android:layout_width="178dp"
                    android:layout_height="60dp"
                    android:background="@drawable/sixth_button"/>
            </FrameLayout>

            <TextView
                android:fontFamily="@font/josefinsans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

    </GridLayout>
    
    <ImageButton
        android:id="@+id/make_button"
        android:contentDescription="@string/three_lines"
        android:layout_below="@id/GridLayout"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/make_button"
        />
    <TextView
        android:id="@+id/best"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/make_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best"
        android:fontFamily="@font/josefinsans_bold"
        android:textSize="20sp"
        />
    <HorizontalScrollView
        android:id="@+id/Horizont_1"
        android:layout_below="@id/best"
        android:layout_width="wrap_content"
        android:layout_height="110dp">
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:contentDescription="@string/three_lines"
            android:layout_marginTop="15dp"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:background="@drawable/uno"
            />
        <ImageButton
            android:contentDescription="@string/three_lines"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:background="@drawable/kfc"
            />
        <ImageButton
            android:contentDescription="@string/three_lines"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:background="@drawable/nathans"
            />
        <ImageButton
            android:contentDescription="@string/three_lines"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:background="@drawable/bellagio"
            />

    </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/sales"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/Horizont_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best"
        android:fontFamily="@font/josefinsans_bold"
        android:textSize="20sp"
        />
    <HorizontalScrollView
        android:layout_below="@id/sales"
        android:layout_width="wrap_content"
        android:layout_height="110dp">
        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:contentDescription="@string/three_lines"
                android:layout_marginTop="15dp"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@drawable/uno"
                />
            <ImageButton
                android:contentDescription="@string/three_lines"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@drawable/kfc"
                />
            <ImageButton
                android:contentDescription="@string/three_lines"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@drawable/nathans"
                />
            <ImageButton
                android:contentDescription="@string/three_lines"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@drawable/bellagio"
                />

        </LinearLayout>

    </HorizontalScrollView>




</RelativeLayout>